add car card component

--- a/src/app/car-card/car-card.component.html
+++ b/src/app/car-card/car-card.component.html
@@ -1,6 +1,6 @@
-<h3>{{ vehicleName() }}</h3>
-<p>{{ vehicleCountry() }}</p>
+<h3>{{ companyName() }}</h3>
+<p>{{ companyCountry() }}</p>
 
 @for (item of vehicleTypes(); track item) {
-  <p>{{ item?.Name }}</p>
+  <p>{{ item.Name }}</p>
 }
