--- a/src/app/app.css
+++ b/src/app/app.css
@@ -5,3 +5,17 @@
   margin: 0;
   padding: 0;
 }
+.navbar {
+  background-color: white;
+  position: sticky;
+  display: flex;
+  font-weight: 600;
+  font-size: 24px;
+  width: 100%;
+  @media (width >= 40rem) {
+    max-width: 40rem;
+  }
+}
+.space {
+  flex-grow: 1;
+}
