--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <main>
-  <h1>Hello World</h1>
-  <nav>
+  <nav class="navbar container">
+    <span>Cars List</span>
+    <div class="space"></div>
     <ul class="nav-menu">
       <li>
         <a routerLink="/">Home</a>
