add car-card to home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<app-car-card />
+<div class="cars-container">
+  @for (car of carsList(); track car.Mfr_ID) {
+    <app-car-card
+      [companyCountry]="car.Country"
+      [companyName]="car.Mfr_Name"
+      [vehicleTypes]="car.VehicleTypes"
+    />
+  }
+</div>
