--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,16 @@
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  @media (width >= 40rem) {
+    max-width: 40rem;
+  }
+  @media (width >= 64rem) {
+    max-width: 64rem;
+  }
+  @media (width >= 80rem) {
+    max-width: 80rem;
+  }
+}
 .cars-container {
   display: grid;
   gap: 1rem;
