--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,16 +6,27 @@
   padding: 0;
 }
 .navbar {
+  border-radius: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
   background-color: white;
   position: sticky;
+  top: 0;
   display: flex;
   font-weight: 600;
   font-size: 24px;
-  width: 100%;
   @media (width >= 40rem) {
-    max-width: 40rem;
+    max-width: 30rem;
   }
 }
 .space {
   flex-grow: 1;
+}
+.shadow {
+  box-shadow: 2px 6px 20px 1px rgba(219, 219, 219, 0.57);
 }
