--- a/src/app/app.css
+++ b/src/app/app.css
@@ -20,6 +20,7 @@
   display: flex;
   font-weight: 600;
   font-size: 24px;
+  transition: all 200ms;
   @media (width >= 40rem) {
     max-width: 30rem;
   }
